# webmacs

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/mkdocs/: index.md  why-webmacs.md
assets/mkdocs/api/: rest.md  schemas.md  websocket.md
assets/mkdocs/architecture/: backend.md  controller.md  database.md  frontend.md  overview.md  websocket.md
assets/mkdocs/deployment/: docker.md  env-vars.md  installation-guide.md  production.md  troubleshooting.md
assets/mkdocs/development/: code-style.md  contributing.md  database-migrations.md  plugin-development.md  testing.md
assets/mkdocs/getting-started/: configuration.md  hardware-sizing.md  installation.md  quick-start.md
assets/mkdocs/guide/: csv-export.md  dashboard.md  datapoints.md  events.md  examples.md  experiments.md  index.md  integrations.md  logs.md  ota.md  plugins.md  rules.md  security.md  sso.md  users.md  webhooks.md
assets/mkdocs/stylesheets/: extra.css
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_plugins.py  002_plugin_packages.py  003_fk_ondelete.py  004_rbac_api_tokens.py  005_oidc_sso.py
backend/src/webmacs_backend/: __init__.py  config.py  database.py  dependencies.py  enums.py  main.py  models.py  repository.py  schemas.py  security.py
backend/src/webmacs_backend/api/v1/: auth.py  dashboards.py  datapoints.py  events.py  experiments.py  health.py  logging.py  ota.py  plugins.py  rules.py  sso.py  tokens.py  users.py  webhooks.py
backend/src/webmacs_backend/middleware/: __init__.py  rate_limit.py  request_id.py
backend/src/webmacs_backend/repositories/: __init__.py  dependencies.py  protocols.py  sqlalchemy_repo.py  timescale_repo.py
backend/src/webmacs_backend/services/: __init__.py  ingestion.py  log_service.py  ota_service.py  plugin_service.py  rule_evaluator.py  updater.py  webhook_dispatcher.py  wheel_validator.py
backend/src/webmacs_backend/ws/: connection_manager.py  endpoints.py
backend/tests/: conftest.py  test_auth.py  test_dashboards.py  test_datapoints.py  test_event_engine.py  test_events.py  test_experiments.py  test_hardening.py  test_health.py  test_integration.py  test_logging.py  test_new_features.py  test_ota.py  test_plugins.py  test_polling_safeguards.py  test_rbac.py  test_rules_api.py  test_sso.py  test_users.py  test_webhook_safeguards.py  test_webhooks.py
controller/: pyproject.toml
controller/src/webmacs_controller/: __init__.py  __main__.py  app.py  config.py  schemas.py
controller/src/webmacs_controller/services/: __init__.py  actuator_manager.py  api_client.py  demo_seeder.py  hardware.py  plugin_bridge.py  rule_engine.py  sensor_manager.py  telemetry.py
controller/tests/: conftest.py  test_api_client.py  test_hardware.py  test_polling_safeguards.py  test_sensor_manager.py
docker/: backend.Dockerfile  controller.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: 404.html  index.html
docs/api/rest/: index.html
docs/api/schemas/: index.html
docs/api/websocket/: index.html
docs/architecture/backend/: index.html
docs/architecture/controller/: index.html
docs/architecture/database/: index.html
docs/architecture/frontend/: index.html
docs/architecture/overview/: index.html
docs/architecture/websocket/: index.html
docs/deployment/docker/: index.html
docs/deployment/env-vars/: index.html
docs/deployment/installation-guide/: index.html
docs/deployment/production/: index.html
docs/deployment/troubleshooting/: index.html
docs/development/code-style/: index.html
docs/development/contributing/: index.html
docs/development/database-migrations/: index.html
docs/development/plugin-development/: index.html
docs/development/testing/: index.html
docs/getting-started/configuration/: index.html
docs/getting-started/hardware-sizing/: index.html
docs/getting-started/installation/: index.html
docs/getting-started/quick-start/: index.html
docs/guide/: index.html
docs/guide/csv-export/: index.html
docs/guide/dashboard/: index.html
docs/guide/datapoints/: index.html
docs/guide/events/: index.html
docs/guide/examples/: index.html
docs/guide/experiments/: index.html
docs/guide/integrations/: index.html
docs/guide/ota/: index.html
docs/guide/plugins/: index.html
docs/guide/rules/: index.html
docs/guide/security/: index.html
docs/guide/sso/: index.html
docs/guide/users/: index.html
docs/guide/webhooks/: index.html
docs/search/: search_index.json
docs/stylesheets/: extra.css
docs/why-webmacs/: index.html
examples/custom-plugin/: README.md  pyproject.toml
examples/custom-plugin/src/webmacs_plugin_weather/: __init__.py  plugin.py
examples/custom-plugin/tests/: test_weather.py
examples/modbus-plugin/: README.md  pyproject.toml
examples/modbus-plugin/tests/: test_modbus.py
examples/webhook-receiver/: README.md  receiver.py  receiver_fastapi.py  register_webhook.py  verify.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: setup.ts
frontend/src/components/: AppSidebar.vue  (+2 more)
plugins/core/: README.md  pyproject.toml
plugins/core/src/webmacs_plugins_core/: __init__.py  base.py  channels.py  config.py  discovery.py  errors.py  health.py  registry.py  testing.py  types.py
plugins/core/tests/: test_plugin_core.py
plugins/revpi/: README.md  pyproject.toml
plugins/revpi/src/webmacs_plugin_revpi/: __init__.py  plugin.py
plugins/revpi/tests/: test_revpi.py
plugins/simulated/: README.md  pyproject.toml
plugins/simulated/src/webmacs_plugin_simulated/: __init__.py  plugin.py
plugins/simulated/tests/: test_simulated.py
plugins/system/: README.md  pyproject.toml
plugins/system/src/webmacs_plugin_system/: __init__.py  plugin.py
plugins/system/tests/: test_system.py
scripts/: build-update-bundle.sh  install.sh  load_test.py
(+60 files in other folders)
