[project]
name = "webmacs"
version = "2.0.0"
description = "WebMACS - Web-based Monitoring and Control System for IoT experiments (Wirbelschicht)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "Stefan Poß" }]

[tool.uv.workspace]
members = ["backend", "controller"]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["backend/src", "controller/src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "ERA", "PL", "TRY", "FLY", "PERF", "RUF"]
ignore = ["S101", "TRY003", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["webmacs_backend", "webmacs_controller", "webmacs_shared"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "controller/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["revpimodio2.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend/src", "controller/src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
