[project]
name = "webmacs-controller"
version = "2.0.0"
description = "WebMACS IoT Controller - Async sensor/actuator management"
requires-python = ">=3.12"
authors = [{ name = "Stefan Poß" }]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "sentry-sdk>=2.19.0",
    "python-dotenv>=1.0.0",
    "websockets>=14.0",
    "webmacs-plugins-core",
    "webmacs-plugin-simulated",
    "webmacs-plugin-system",
    "webmacs-plugin-revpi",
]

[project.optional-dependencies]
hardware = ["revpimodio2>=2.6.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/webmacs_controller"]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "revpimodio2.*"
ignore_missing_imports = true
follow_untyped_imports = true
