[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webmacs-plugin-weather"
version = "0.1.0"
description = "Example custom Weather Station plugin for WebMACS"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = ["webmacs-plugins-core>=0.1.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[project.entry-points."webmacs.plugins"]
weather = "webmacs_plugin_weather:WeatherStationPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/webmacs_plugin_weather"]

[tool.uv.sources]
webmacs-plugins-core = { path = "../../plugins/core" }
