[project]
name = "webmacs-plugins-core"
version = "1.0.0"
description = "WebMACS Plugin SDK — base classes, registry, and testing tools for device plugins"
requires-python = ">=3.12"
authors = [{ name = "Stefan Poß" }]
dependencies = [
    "pydantic>=2.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webmacs_plugins_core"]
