[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webmacs-plugin-system"
version = "0.1.0"
description = "System monitoring plugin for WebMACS — CPU, memory, disk and temperature"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Stefan Poß" }]
dependencies = ["webmacs-plugins-core>=0.1.0", "psutil>=5.9"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[project.entry-points."webmacs.plugins"]
system = "webmacs_plugin_system:SystemPlugin"

[tool.hatch.build.targets.wheel]
packages = ["src/webmacs_plugin_system"]
